fix: Bringing in bug fixes from openshift

--- a/elements/pfe-jump-links/demo/demo.css
+++ b/elements/pfe-jump-links/demo/demo.css
@@ -5,9 +5,9 @@ html {
 
 #nav-vars-set {
     --pfe-navigation--Height--actual: 55px;
-    --pfe-jump-links--nav-height: 62px;
-    --pfe-jump-links-panel__section--spacer: 117px;
-    --pfe-jump-links-panel--offset: 55px;
+    /* --pfe-jump-links--nav-height: 62px; */
+    /* --pfe-jump-links-panel__section--spacer: 117px;
+    --pfe-jump-links-panel--offset: 55px; */
 
     /* For testing */
     /* --pfe-jump-links-panel--offset: 120px; */
